--- a/cecs_491/demo/dotnet-host-demo/WebApi-Controller/Properties/launchSettings.json
+++ b/cecs_491/demo/dotnet-host-demo/WebApi-Controller/Properties/launchSettings.json
@@ -1,13 +1,12 @@
 {
-  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "WebApi_Controller": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7079;http://localhost:5079",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7079;http://localhost:5079"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -15,6 +14,15 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:63321/",
+      "sslPort": 44334
     }
   }
 }
